--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 
     // Language and Environment
     "target": "ES2020",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
 
     // Completeness
     "skipLibCheck": true
